ai-ml/reel-driver/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reel-driver
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: reel-driver
  template:
    metadata:
      labels:
        app: reel-driver
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: reel-driver-api
        image: 192.168.50.2:5050/ai-ml/reel-driver/api:main
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: gitlab-registry
